src/_shared.scss
$base-color: var(--base-color);
$flash-color: var(--flash-color);
$background-color: var(--background-color);
$secondary-background-color: var(--secondary-background-color);

$desktop-margin: clamp(150px, 50px, 25px);
$mobile-margin: 5vw;
$main-font-size: 1rem;
// $desktop-margin: 15vw;
// $mobile-margin: 5vw;
// $main-font-size: 1rem;

@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

@mixin main-font {
  font-family: 'Bai Jamjuree', sans-serif;
}

@mixin main-animation($name, $speed: 0.3s) {
  animation: $name $speed cubic-bezier(0.01, 0.95, 0, 1) both;
}

@mixin main-transition($name: all, $time: 0.15s) {
  transition: $name $time ease-in;
}

body[data-theme='dark'],
footer[data-theme='dark'] {
  @include main-animation(color, 0.3s);
  @include main-animation(background-color, 0.3s);
  --base-color: #eeeeee;
  --flash-color: #e94d35; // #FFCA00
  --background-color: #31363f;
  --secondary-background-color: #31363f;
  --sending-status-color: #e94d35;
}

body[data-theme='light'],
footer[data-theme='light'] {
  @include main-animation(color, 0.3s);
  @include main-animation(background-color, 0.3s);
  --base-color: #161513;
  --flash-color: #e94d35; // #FFCA00
  --background-color: white;
  --secondary-background-color: #f2f1ef;
  --sending-status-color: darkgreen;
}

body[data-theme='light'] .main-hero {
  background-image: url('./assets/circle-scatter-light.svg');
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: top;
}

body[data-theme='dark'] .main-hero {
  background-image: url('./assets/circle-scatter-dark.svg');
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: top;
}
.main-hero {
  @media all and (max-width: 768px) {
    min-height: 100dvh;
  }
}
.footer {
  background-color: var(--secondary-background-color);
  color: var(--base-color);
}

html {
  background-color: var(--background-color);
  scroll-behavior: smooth;
}
body {
  margin: 0 auto;
  padding: 0;
  box-sizing: border-box;
  @include main-font;
  font-size: $main-font-size;
  font-weight: 500;
  color: var(--base-color);
  background-color: var(--background-color);
  max-width: 125em;
  // max-width: 1920px;
}

a {
  color: inherit;
  text-decoration: none;
}

.flash-color {
  color: $flash-color;
}

.icon-margin {
  margin: auto 15px;
}

.error {
  color: $flash-color;
}

.message-sending-status {
  color: var(--sending-status-color);
  font-weight: bolder;
  text-align: center;
}

.dark-mode {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 15px;
  &.react-toggle:not(.react-toggle--disabled) .react-toggle-track {
    background-color: #dfe0e2; // day mode
  }
  &.react-toggle--checked:not(.react-toggle--disabled) .react-toggle-track {
    background-color: var(--flash-color); // night mode
  }
  @media all and (max-width: 600px) {
    margin-left: 0;
  }
}
// border radius for button
.react-toggle:active:not(.react-toggle--disabled) .react-toggle-thumb {
  box-shadow: 0px 0px 2px 2px var(--flash-color);
}
// border radius for button
.react-toggle--focus .react-toggle-thumb {
  box-shadow: 0px 0px 2px 2px var(--flash-color);
}

.hoverAnimation:hover::after {
  content: '';
  position: absolute;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  color: var(--background-color);
  background-color: var(--base-color);
  z-index: -1;
  transform: scaleX(0);
  transform-origin: left;
  @include main-animation(links-animation);
}

.contact-link {
  &--background-light {
    background-color: transparent;
    color: var(--base-color);
  }
  &--background-dark {
    background-color: var(--base-color);
    color: var(--background-color);
  }
  &--animation:hover {
    color: var(--background-color);
    @include main-animation(all);
  }
}

.banner-container {
  &__content {
    background-color: var(--base-color);
    color: var(--background-color);
  }
}
.flash-stat {
  &:nth-child(even) {
    background-color: var(--base-color);
    color: var(--background-color);
  }
}
.fixed-menu {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  // max-width: 120em;
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 700;
  margin: 0;
  padding: 0 $desktop-margin;
  background-color: var(--background-color);
  // border-bottom: solid 1px var(--base-color);
  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
  z-index: 3;
  transform-origin: top;
  transform: scaleY(0);
  @include main-animation(menu-animation, 0.5s);
  @media all and (max-width: 600px) {
    margin: 0;
    padding: 0 5vw;
  }
}

.up-arrow {
  position: fixed;
  right: 0;
  bottom: 70px;
  color: var(--flash-color);
  margin-right: $desktop-margin;
  visibility: hidden;
  cursor: pointer;
  opacity: 0;
  &:hover {
    transform: scale(1.05);
  }
  @include main-transition(transform);
  &--visible {
    @include main-transition(opacity);
    visibility: visible;
    opacity: 1;
  }
  @media all and (max-width: 768px) {
    bottom: 15px;
    margin-right: $mobile-margin;
  }
}

@keyframes links-animation {
  to {
    transform: scaleX(1);
  }
}
@keyframes menu-animation {
  to {
    -webkit-transform: scaleY(1);
  }
}

.loader {
  width: 4px;
  color: #000;
  aspect-ratio: 1;
  border-radius: 50%;
  box-shadow: 19px -19px 0 0px, 38px -19px 0 0px, 57px -19px 0 0px, 19px 0 0 5px,
    38px 0 0 5px, 57px 0 0 5px, 19px 19px 0 0px, 38px 19px 0 0px,
    57px 19px 0 0px;
  transform: translateX(-38px);
  animation: l26 2s infinite linear;
}
@keyframes l26 {
  12.5% {
    box-shadow: 19px -19px 0 0px, 38px -19px 0 0px, 57px -19px 0 5px,
      19px 0 0 5px, 38px 0 0 0px, 57px 0 0 5px, 19px 19px 0 0px, 38px 19px 0 0px,
      57px 19px 0 0px;
  }
  25% {
    box-shadow: 19px -19px 0 5px, 38px -19px 0 0px, 57px -19px 0 5px,
      19px 0 0 0px, 38px 0 0 0px, 57px 0 0 0px, 19px 19px 0 0px, 38px 19px 0 5px,
      57px 19px 0 0px;
  }
  50% {
    box-shadow: 19px -19px 0 5px, 38px -19px 0 5px, 57px -19px 0 0px,
      19px 0 0 0px, 38px 0 0 0px, 57px 0 0 0px, 19px 19px 0 0px, 38px 19px 0 0px,
      57px 19px 0 5px;
  }
  62.5% {
    box-shadow: 19px -19px 0 0px, 38px -19px 0 0px, 57px -19px 0 0px,
      19px 0 0 5px, 38px 0 0 0px, 57px 0 0 0px, 19px 19px 0 0px, 38px 19px 0 5px,
      57px 19px 0 5px;
  }
  75% {
    box-shadow: 19px -19px 0 0px, 38px -19px 0 5px, 57px -19px 0 0px,
      19px 0 0 0px, 38px 0 0 0px, 57px 0 0 5px, 19px 19px 0 0px, 38px 19px 0 0px,
      57px 19px 0 5px;
  }
  87.5% {
    box-shadow: 19px -19px 0 0px, 38px -19px 0 5px, 57px -19px 0 0px,
      19px 0 0 0px, 38px 0 0 5px, 57px 0 0 0px, 19px 19px 0 5px, 38px 19px 0 0px,
      57px 19px 0 0px;
  }
}

@media (prefers-reduced-motion: no-preference) {
  @supports (animation-timeline: view()) {
    .animatable {
      opacity: 0;
      transform: scale(0.8);
      animation: fadeIn linear both;
      animation-timeline: view();
      animation-range-start: cover;
      animation-range-end: 300px;
    }
  }
}
@keyframes fadeIn {
  to {
    opacity: 1;
    transform: scale(1);
  }
}

